criação versão desktop e versão tablet + alterações

--- a/index.html
+++ b/index.html
@@ -11,28 +11,36 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body class="fundo">
+<body class = "fundo">
     <!--Alinhar verticalmente os títulos-->
     <div class="espaco-6"></div>
-    <h1 class="borda titulo">Jogo da memória</h1>
+    <h1 class="borda titulo">JOGO DA MEMÓRIA</h1>
     <div class="espaco-1"></div>
     <h1 class="subtitulo-t borda">Doença de chagas</h1>
     <div class="espaco-3"></div>
-    <img src="assets/img/cards-img.png">
+    <img src="assets/img/cards-img.png" class="cards-inicial">
     <div class="espaco-3"></div>
     <div class="row">
-        <div class="col"><button class="btn btn-primary ">INICIAR </button></div>
+        <div class="col"><a class="btn btn-primary" href="#nivel.html"> INICIAR </a></div>
     </div>
-    <!--Problema na borda do botao-->
-    <div class="espaco-6"></div>
-    <div class="row">
+    <!--Problema no link do botao - consertado-->
+   <div class="espaco-6"></div>
+   <!-- <div class="row">
         <div class="col icones-altura largura-espaco"> </div>
         <div class="col-lg-1 icones-altura icones-largura"> <img src="assets/img/botao-instruções.svg" class="alinhar-icone-1"></div>
         <div class="col-lg-1 icones-altura icones-largura"> <img src="assets/img/botao-creditos.svg"  class="alinhar-icone-2"></div>
         <div class="col-lg-1 icones-altura icones-largura"> <img src="assets/img/botao-compartilhar.svg"  class="alinhar-icone-3"></div>
-        <div class="col icones-altura largura-espaco"></div>
-        <!-- Problema com fixar embaixo -->
+        <div class="col icones-altura largura-espaco"></div> 
+    </div> -->
+   <!-- pROBLEMA PARA CENTRALIZAR URGENTE-->
+    <div class="caixa-btns-c">
+        <div class="btn-circ btn-circ-1"> <img src="assets/img/botao-instruções.svg"></div>
+        <div class="btn-circ btn-circ-2"> <img src="assets/img/botao-creditos.svg"></div>
+        <div class="btn-circ btn-circ-3"> <img src="assets/img/botao-compartilhar.svg"></div>
     </div>
+
+     <div class="espaco-6"></div>
+     <div class="espaco-6"></div>
      <div class="espaco-6"></div>
     <img class = "logo-eic" src="assets/img/logo-eic-branco.png">
     </div>
