--- a/nivel.html
+++ b/nivel.html
@@ -13,9 +13,11 @@
 </head>
 
 <body class="fundo">
+    <div class = "menu-lateral"> <h3 class="fonte-menu-lateral"> oioio </h3> </div>
     <div class="espaco-6"></div>
-    <h1 class="subtitulo-2 borda">Escolha um nível</h1>
+    <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
     <div class="espaco-6"></div>
+    <p> Você terá um tempo para memorizar as posições dos cartões com as imagens! </p>
 
 
 
