Telas iniciais prontas

--- a/nivel.html
+++ b/nivel.html
@@ -13,11 +13,27 @@
 </head>
 
 <body class="fundo">
-    <div class = "menu-lateral"> <h3 class="fonte-menu-lateral"> oioio </h3> </div>
+    <div class = "menu"> 
+        <div class="espaco-6"></div>
+        <div class="espaco-6"></div>
+        <!--logo eic-->
+         <div> 
+            <a href="index.html"> 
+                <img src="assets/img/logo-eic-branco.png">
+            </a>
+         </div>
+        <div class="espaco-6"></div>
+        <div class="espaco-6"></div>
+
+        <h3 class="fonte-menu-lateral"> Início </h3> 
+        <h3 class="fonte-menu-lateral"> Sobre o jogo </h3> 
+        <h3 class="fonte-menu-lateral"> Créditos </h3> 
+        <h3 class="fonte-menu-lateral"> ompartilhar </h3> 
+    </div>
     <div class="espaco-6"></div>
     <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
     <div class="espaco-6"></div>
-    <p> Você terá um tempo para memorizar as posições dos cartões com as imagens! </p>
+    <p class="largura-texto"> Você terá um tempo para memorizar as posições dos cartões com as imagens! </p>
 
 
 
