Telas iniciais prontas + menu desktop

--- a/nivel.html
+++ b/nivel.html
@@ -13,27 +13,76 @@
 </head>
 
 <body class="fundo">
-    <div class = "menu"> 
-        <div class="espaco-6"></div>
-        <div class="espaco-6"></div>
-        <!--logo eic-->
-         <div> 
-            <a href="index.html"> 
-                <img src="assets/img/logo-eic-branco.png">
-            </a>
-         </div>
-        <div class="espaco-6"></div>
-        <div class="espaco-6"></div>
-
-        <h3 class="fonte-menu-lateral"> Início </h3> 
-        <h3 class="fonte-menu-lateral"> Sobre o jogo </h3> 
-        <h3 class="fonte-menu-lateral"> Créditos </h3> 
-        <h3 class="fonte-menu-lateral"> ompartilhar </h3> 
+ <!-- menu Desktop -->
+    <ul>
+    <li class = "espaco-6"></li>
+    <li> 
+        <a href="index.html"> 
+            <img src="assets/img/logo-eic-branco.png">
+        </a>
+    <li class = "espaco-6"></li>
+    <li class = "espaco-6"></li>
+    <li> 
+    <a href="index.html"> </a>
+    <li>
+        <a href="index.html">
+        <div class="elem-menu-lateral">
+        <img  src="assets/img/home.svg">
+        <p> Início <p> 
+        <div>
+        </a>
+    </li>
+    <li class = "espaco-6"></li>
+    <li>
+        <a href="instrucoes.html">
+        <div class="elem-menu-lateral">
+        <img  src="assets/img/sobre-o-jogo.svg">
+        <p> Sobre o jogo <p> 
+        <div>
+        </a>
+    </li>
+    <li class = "espaco-6"></li>
+    <li>
+        <a href="index.html">
+        <div class="elem-menu-lateral">
+        <img  src="assets/img/creditos.svg">
+        <p> Créditos <p> 
+        <div>
+        </a>
+    </li>
+    <li class = "espaco-6"></li>
+    <li>
+        <a href="compartilhar.html">
+        <div class="elem-menu-lateral">
+        <img  src="assets/img/compartilhar.svg">
+        <p> Compartilhar <p> 
+        <div>
+        </a>
+    </li>
+    </ul>
+     <!--Menu mobile-->
+     <!-- Construir menu tabler e celular-->
+    <div class="menu-mobile">
+    <div class="row">
+    <div class"col"><img scr="assets/img/botao-creditos.svg"> </div>
+     <div class"col"><img scr="assets/img/botao-creditos.svg"> </div>
+      <div class"col"><img scr="assets/img/botao-creditos.svg"> </div>
     </div>
+    </div>
+    <!-- fim Menu / navbar-->
+    <!-- Alinhar titulos ao centro-->
     <div class="espaco-6"></div>
     <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
     <div class="espaco-6"></div>
     <p class="largura-texto"> Você terá um tempo para memorizar as posições dos cartões com as imagens! </p>
+     <div class="espaco-6"></div>
+     <!--alinhar botoes ao centro-->
+     <div class="col">
+        <div class="row"><a class="btn btn-primary btn-facil" href="#"> FÁCIL </a></div>
+        <div class="row"><a class="btn btn-primary btn-medio" href="#"> MÉDIO </a></div>
+        <div class="row"><a class="btn btn-primary btn-dificil" href="#"> DÍFICIL </a></div>
+    </div>
+
 
 
 
