Versão atualizada - telas iniciais

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <div class="row">
         <div class="col"><a class="btn btn-primary" href="nivel.html"> INICIAR </a></div>
     </div>
-    <!--Problema no link do botao - consertado-->
    <div class="espaco-6"></div>
-   <!-- pROBLEMA PARA CENTRALIZAR URGENTE-->
+   <!-- pROBLEMA PARA CENTRALIZAR URGENTE ( caixas ) -->
     <div class="caixa-btns-c">
         <div class="btn-circ" id="btn-circ-1"> <a href="instrucoes.html"> <img src="assets/img/botao-instruções.svg"></a></div>
         <div class="btn-circ" id="btn-circ-2"> <a href="creditos.html"> <img src="assets/img/botao-creditos.svg"></a></div>
