--- a/nivel.html
+++ b/nivel.html
@@ -13,8 +13,8 @@
 </head>
 
 <body class="fundo">
- <!-- menu Desktop -->
-    <ul>
+ <!-- menu Desktop - rodando perfeito -->
+    <ul class="esconder-menu-desktop">
     <li class = "espaco-6"></li>
     <li> 
         <a href="index.html"> 
@@ -32,7 +32,7 @@
         <div>
         </a>
     </li>
-    <li class = "espaco-6"></li>
+    <li class = "espaco-3"></li>
     <li>
         <a href="instrucoes.html">
         <div class="elem-menu-lateral">
@@ -41,7 +41,7 @@
         <div>
         </a>
     </li>
-    <li class = "espaco-6"></li>
+    <li class = "espaco-3"></li>
     <li>
         <a href="index.html">
         <div class="elem-menu-lateral">
@@ -50,7 +50,7 @@
         <div>
         </a>
     </li>
-    <li class = "espaco-6"></li>
+    <li class = "espaco-3"></li>
     <li>
         <a href="compartilhar.html">
         <div class="elem-menu-lateral">
@@ -61,7 +61,7 @@
     </li>
     </ul>
      <!--Menu mobile-->
-     <!-- Construir menu tabler e celular-->
+     <!-- Construir menu tabler e celular - ta um caos -->
     <div class="menu-mobile">
     <div class="row">
     <div class"col"><img scr="assets/img/botao-creditos.svg"> </div>
@@ -70,17 +70,25 @@
     </div>
     </div>
     <!-- fim Menu / navbar-->
+
     <!-- Alinhar titulos ao centro-->
     <div class="espaco-6"></div>
     <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
     <div class="espaco-6"></div>
     <p class="largura-texto"> Você terá um tempo para memorizar as posições dos cartões com as imagens! </p>
-     <div class="espaco-6"></div>
-     <!--alinhar botoes ao centro-->
-     <div class="col">
-        <div class="row"><a class="btn btn-primary btn-facil" href="#"> FÁCIL </a></div>
-        <div class="row"><a class="btn btn-primary btn-medio" href="#"> MÉDIO </a></div>
-        <div class="row"><a class="btn btn-primary btn-dificil" href="#"> DÍFICIL </a></div>
+    <div class="espaco-6"></div>
+
+     <!--alinhar botoes ao centro - feito -->
+     <div class="row">
+        <div class="col"><a class="btn btn-primary btn-facil" href="#"> FÁCIL </a></div>
+    </div>
+    <div class="espaco-6"></div>
+    <div class="row">
+        <div class="col"><a class="btn btn-primary btn-medio" href="#"> MÉDIO </a></div>
+    </div>
+    <div class="espaco-6"></div>
+    <div class="row">
+        <div class="col"><a class="btn btn-primary btn-dificil" href="#"> DÍFICIL </a></div>
     </div>
 
 
