menu funcionando nos 3 dispositivos - celular + tablet + desktop

--- a/nivel.html
+++ b/nivel.html
@@ -65,52 +65,67 @@
     </div>
 
     <div class="fundo">
-        <!--Menu mobile-->
-       <!-- <div class="menu-mobile">
-        <div class="nav-botao-voltar">
-        <p> aaa </p>
-            <a href="index.html" > 
-               <div class="nav-elem">
-                <img  src="assets/img/home.svg">
-                <p> Início <p> 
-                </div>
-            </a>
-        </div>
-        <div class="nav-logo-eic">
-        <p> aaa </p>
-            <a href="index.html"> 
-                <img class="nav-elem" src="assets/img/nav/voltar.svg">
-            </a>
-        </div>
-        <div class="nav-botao-menu">
-        <p> aaa </p>
-            <a href="index.html"> 
-                <img class="nav-elem" src="assets/img/nav/voltar.svg">
-            </a>
-        </div>
-    </div>-->
-    
-   
-        <div class="espaco-6"></div>
-        <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
-        <div class="espaco-6"></div>
-        <p class="largura-texto"> Você terá um tempo para memorizar as posições dos cartões com as imagens! </p>
-        <div class="espaco-6"></div>
+
+<!-- menu mobile-->
+    <div class="espaco-3 menu-mobile"></div>
+    <div class="menu-mobile">
+
+        <div class="espaco-6 menu-mobile"></div>
+
+        <div class="row menu-mobile">
+
+        <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
+            <div class="col menu-mobile">
+                <a class = "menu-mobile" href="index.html"> 
+                    <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
+                </a>
+            </div>
+            <div class="col menu-mobile">
+                <a class="menu-mobile" href="index.html"> 
+                    <img class="nav-elem menu-mobile" src="assets/img/nav/logo-eic-nav.svg">
+                </a>
+            </div>
+            <!-- lembrar de arrumar section, pra ver como fica -->
+            <div class="col menu-mobile">
+                <a class="menu-mobile" href="menu.html"> 
+                    <img class="nav-elem" src="assets/img/nav/menu.svg">
+                </a>
+            </div>
+            </div>
+
+    </div>
+
+<!--fim menu mobile-->
+<!-- Conteúdo da página -->
+    <div class="espaco-6"> </div>
+
+    <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
+    <div class="espaco-6"></div>
+    <p class="largura-texto"> Você terá um tempo para memorizar as posições dos cartões com as imagens! </p>
+    <div class="espaco-6"></div>
 
         <!--alinhar botoes ao centro - feito -->
         <div class="row">
-            <div class="col"><a class="btn btn-primary btn-facil" href="#"> FÁCIL </a></div>
+            <div class="col"><a class="btn btn-primary btn-facil" href="#"> FÁCIL </a> </div>
         </div>
-        <div class="espaco-6"></div>
-        <div class="row">
-            <div class="col"><a class="btn btn-primary btn-medio" href="#"> MÉDIO </a></div>
-        </div>
-        <div class="espaco-6"></div>
-        <div class="row">
-            <div class="col"><a class="btn btn-primary btn-dificil" href="#"> DÍFICIL </a></div>
-        </div>
-    </div>
 
+        <div class="espaco-6"></div>
+
+        <div class="row">
+            <div class="col">
+                <a class="btn btn-primary btn-medio" href="#"> MÉDIO  </a>
+            </div>
+        </div>
+
+        <div class="espaco-6"></div>
+
+        <div class="row">
+            <div class="col">
+            <a class="btn btn-primary btn-dificil" href="#"> DÍFICIL </a>
+            </div>
+        </div>
+
+</div>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
