fazendo menu lateral do mobile - aparece ao clicar no botao da direita

--- a/nivel.html
+++ b/nivel.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
+    
 </head>
 
 <body>
@@ -87,7 +88,7 @@
             </div>
             <!-- lembrar de arrumar section, pra ver como fica -->
             <div class="col menu-mobile">
-                <a class="menu-mobile" href="menu.html"> 
+                <a class="menu-mobile" href="#menu-mobile-ativado"  data-toggle="modal"> 
                     <img class="nav-elem" src="assets/img/nav/menu.svg">
                 </a>
             </div>
@@ -126,9 +127,10 @@
         </div>
 
 </div>
-
+     
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/menu-modal.js"></script>
 </body>
 
 </html>
