--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Nível - Jogo da memória</title>
+    <title>Sobre o jogo - Jogo da memória</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
@@ -97,34 +97,13 @@
 
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
+<!-- Fazer botao de voltar-->
     <div class="espaco-6"> </div>
 
-    <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
+    <h1 class="subtitulo-2">SOBRE O JOGO</h1>
     <div class="espaco-6"></div>
-    <p class="largura-texto"> Você terá um tempo para memorizar as posições dos cartões com as imagens! </p>
+    <p class="largura-texto"> O jogo da memória Doença de Chagas é composto por 3 fases </p>
     <div class="espaco-6"></div>
-
-
-        <!--alinhar botoes ao centro - feito -->
-        <div class="row">
-            <div class="col"><a class="btn btn-primary btn-facil" href="#"> FÁCIL </a> </div>
-        </div>
-
-        <div class="espaco-6"></div>
-
-        <div class="row">
-            <div class="col">
-                <a class="btn btn-primary btn-medio" href="#"> MÉDIO  </a>
-            </div>
-        </div>
-
-        <div class="espaco-6"></div>
-
-        <div class="row">
-            <div class="col">
-            <a class="btn btn-primary btn-dificil" href="#"> DÍFICIL </a>
-            </div>
-        </div>
 
 </div>
      
