--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
     </div>
    <div class="espaco-6"></div>
    <!-- pROBLEMA PARA CENTRALIZAR URGENTE ( caixas ) -->
+   
     <div class="caixa-btns-c">
+        <div class = "elem-btn-c">
         <div class="btn-circ" id="btn-circ-1"> <a href="instrucoes.html"> <img src="assets/img/botao-instruções.svg"></a></div>
+        </div>
+        <div class="h-espaco-botoes"></div>
+        <div class = "elem-btn-c">
         <div class="btn-circ" id="btn-circ-2"> <a href="creditos.html"> <img src="assets/img/botao-creditos.svg"></a></div>
+        </div>
+        <div class="h-espaco-botoes"> </div>
         <div class="btn-circ" id="btn-circ-3"> <a href="compartilhar.html"> <img src="assets/img/botao-compartilhar.svg"> </a></div>
-    </div>
+
+     </div>
 
      <div class="espaco-6"></div>
      <div class="espaco-6"></div>
