musanças do dia - nao mudam nada na prática

--- a/nivel.html
+++ b/nivel.html
@@ -17,12 +17,13 @@
  <!-- menu Desktop - rodando perfeito -->
 
     <div class="menu-desktop">
-        <ul class="menu-desktop">
+        <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
         <li> <!--Colocar o logo no centro-->
             <a class="menu-desktop" href="index.html"> 
                 <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
             </a>
+        </li>
         <li class = "menu-desktop espaco-6"></li>
         <li class = "menu-desktop espaco-6"></li>
         <li class="menu-desktop"> 
@@ -67,6 +68,7 @@
 
     <div class="fundo">
 <!-- menu mobile-->
+    <div class="espaco-3"></div>
     <div class="espaco-3 menu-mobile"></div>
     <div class="menu-mobile">
 
