progresso do dia

--- a/jogo-facil.html
+++ b/jogo-facil.html
@@ -100,6 +100,7 @@
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
 
+
     <div class="espaco-6"> </div>
     <h1 class="subtitulo-2">FASE 1</h1>
     <div class="espaco-3"></div>
@@ -109,23 +110,32 @@
     <div class="espaco-6 mostrar-no-desktop"> </div>
     <div class="espaco-6 mostrar-no-desktop"> </div>
 
+<!-- Painel ensinando como jogar -->
+
         <div class="row alinhar-centro">
         <div class="col col-lg-4"></div>
         <div class="col col-lg-5">
             <div class="row">
+
                 <div class="elem-carta">
                     <img src="assets/img/card-exemplo.png">
                 </div>
+                <!-- Pensar em algo pra empurrar a seta vertical para a outra linha-->
                 <div class="seta-meio"> 
-                    <img src="assets/img/seta-dupla.png">
+                    <img class="mostrar-horizontal" src="assets/img/seta-dupla.png">
+                    <img class="mostrar-vertical" src="assets/img/seta-vertical.png">
                 </div>
+
                 <div class="elem-carta"> 
                     <img src="assets/img/card-exemplo.png">
                 </div> 
+
             </div>
         </div>
         <div class="col col-lg-3"></div>
         </div> 
+
+<!--Fim  painel  -->
 
          <div class="espaco-6 mostrar-no-desktop"> </div>
         <div class="espaco-3"></div>
