--- a/nivel.html
+++ b/nivel.html
@@ -29,7 +29,7 @@
         <li class="menu-desktop"> 
         <a href=" menu-desktop index.html"> </a>
         <li class="menu-desktop">
-            <a href="menu-desktop index.html">
+            <a href="index.html">
             <div class=" menu-desktop elem-menu-lateral">
             <img  class ="menu-desktop" src="assets/img/home.svg">
             <p class="menu-desktop"> Início <p> 
