--- a/fase1.html
+++ b/fase1.html
@@ -113,69 +113,82 @@
 
 <!-- Painel ensinando como jogar -->
 
-    <div class="row alinhar-centro padrao-desktop padrao-mobile">
-    <div class="col alinhar-cartas-centro">
-      <div class="row">
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-        <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-       </div>
-       <div class="row">
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-        <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       </div>
-        <div class="row">
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-        <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       </div>
-        <div class="row">
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-        <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       </div> 
-       </div>
-       <div class="row alinhar-centro padrao-tablet">
-        <div class="col alinhar-cartas-centro">
-       <div class="row">
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-        <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-       </div>
-       <div class="row">
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-        <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       </div>
-        <div class="row">
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-        <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       </div>
-        <div class="row">
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div>  
-        <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       <div class="col col-lg-2"> <img src="assets/img/card-exemplo.png"> </div> 
-       </div> 
-       </div>
+<div id="container">
+    <div class="card" id="card0">
+        <div class="face back">  </div>
+         <div class="face front"> </div>
+    </div>
+     <div class="card" id="card1">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+     <div class="card" id="card2">
+         <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+     <div class="card" id="card3">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+     <div class="card" id="card4">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+     <div class="card" id="card5">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card6">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card7">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card8">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card9">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card10">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card11">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card12">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card13">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card14">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+    <div class="card" id="card15">
+        <div class="face back">  </div>
+         <div class="face front">  </div>
+    </div>
+</div>
 
+  
 
 <!--Fim  painel  -->
 
     </div>
-     
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
+    <script src="assets/js/jogo.js"></script>
 </body>
 
 </html>
