--- a/fase1.html
+++ b/fase1.html
@@ -105,7 +105,7 @@
 
 
     <div class="espaco-6"> </div>
-    <h1 class="subtitulo-2">TEMPO</h1>
+    <h1 class="borda titulo">TEMPO</h1>
     <div class="espaco-3"></div>
     <div class="espaco-3 mostrar-no-desktop"> </div>
     <p class="largura-texto"> Observe os cartões e memorize as posições! </p>
