--- a/nivel.html
+++ b/nivel.html
@@ -109,14 +109,14 @@
 
         <!--alinhar botoes ao centro - feito -->
         <div class="row">
-            <div class="col"><a class="btn btn-primary btn-facil" href="#"> FÁCIL </a> </div>
+            <div class="col"><a class="btn btn-primary btn-facil" href="fase1.html"> FÁCIL </a> </div>
         </div>
 
         <div class="espaco-6"></div>
 
         <div class="row">
             <div class="col">
-                <a class="btn btn-primary btn-medio" href="#"> MÉDIO  </a>
+                <a class="btn btn-primary btn-medio" href="fase2.html"> MÉDIO  </a>
             </div>
         </div>
 
@@ -124,7 +124,7 @@
 
         <div class="row">
             <div class="col">
-            <a class="btn btn-primary btn-dificil" href="#"> DÍFICIL </a>
+            <a class="btn btn-primary btn-dificil" href="fase3.html"> DÍFICIL </a>
             </div>
         </div>
 
