--- a/fase1.html
+++ b/fase1.html
@@ -92,13 +92,24 @@
             </div>
             <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
             <div class="col menu-mobile">
-                <a class="menu-mobile" href="#menu-mobile-ativado"  data-toggle="modal"> 
+                <a class="menu-mobile" id="menumodal"> 
                     <img class="nav-elem" src="assets/img/nav/menu.svg">
                 </a>
             </div>
             </div>
 
     </div>
+    <!-- <div class="modal menu-lateral-modal"> 
+     <ul class="ULmodal"> 
+     <li class="espaco-3"> </li>
+      <li> <img class ="logo-eic-modal-centro" src="assets/img/logo-eic-branco.png">  </li> 
+      <li> <br> </li> 
+      <li> <br> </li>
+       <li> <a href="#"> 
+       <div class="elem-menu-modal">  
+       <img src="assets/img/home.svg">
+        <p> Início </p> </div> </a> </li> <li> <br> <br> <p> Sobre o jogo </p> </li> 
+         <li> Créditos </li> <li> Compartilhar </li></ul> </div> -->
 
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
