--- a/fase1.html
+++ b/fase1.html
@@ -116,7 +116,7 @@
 
 
     <div class="espaco-3"> </div>
-    <h1 class="subtitulo-2">TEMPO</h1>
+    <h1 class="subtitulo-2" id="titulo-jogo">TEMPO</h1>
     <div class="espaco-1"></div>
     <div class="espaco-3 mostrar-no-desktop"> </div>
     <p class="largura-texto"> Observe os cartões e memorize as posições! </p>
