divider da pagina de compartilhamento feito

--- a/nivel.html
+++ b/nivel.html
@@ -90,7 +90,7 @@
             </div>
             <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
             <div class="col menu-mobile">
-                <a class="menu-mobile" id="aaaa"> 
+                <a class="menu-mobile" id="menuLateral"> 
                     <img class="nav-elem" src="assets/img/nav/menu.svg">
                 </a>
             </div>
