--- a/compartilhar.html
+++ b/compartilhar.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
+    <link rel="stylesheet" href="assets/css/jogo.css">
+    <link rel="stylesheet" href="assets/css/menuLateral.css">
+
+
     
 </head>
 
@@ -17,18 +21,19 @@
  <!-- menu Desktop - rodando perfeito -->
 
     <div class="menu-desktop">
-        <ul class="menu-desktop">
+        <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
         <li> <!--Colocar o logo no centro-->
             <a class="menu-desktop" href="index.html"> 
                 <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
             </a>
+        </li>
         <li class = "menu-desktop espaco-6"></li>
         <li class = "menu-desktop espaco-6"></li>
         <li class="menu-desktop"> 
         <a href=" menu-desktop index.html"> </a>
         <li class="menu-desktop">
-            <a href="menu-desktop index.html">
+            <a href="index.html">
             <div class=" menu-desktop elem-menu-lateral">
             <img  class ="menu-desktop" src="assets/img/home.svg">
             <p class="menu-desktop"> Início <p> 
@@ -65,39 +70,38 @@
         </ul>
     </div>
 
-    <div class="fundo">
-<!-- menu mobile-->
-    <div class="espaco-3 menu-mobile"></div>
-    <div class="menu-mobile">
+<div class="fundo">
+        <!-- menu mobile-->
+        <div class="espaco-3 menu-mobile"></div>
+        <div class="menu-mobile">
 
-        <div class="espaco-6 menu-mobile"></div>
+            <div class="espaco-6 menu-mobile"></div>
 
-        <div class="row menu-mobile">
+            <div class="row menu-mobile">
 
-        <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
-            <div class="col menu-mobile">
-                <a class = "menu-mobile" href="index.html"> 
-                    <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
-                </a>
-            </div>
-            <div class="col menu-mobile">
-                <a class="menu-mobile" href="index.html"> 
-                    <img class="nav-elem menu-mobile" src="assets/img/nav/logo-eic-nav.svg">
-                </a>
-            </div>
-            <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
-            <div class="col menu-mobile">
-                <a class="menu-mobile" href="#menu-mobile-ativado"  data-toggle="modal"> 
-                    <img class="nav-elem" src="assets/img/nav/menu.svg">
-                </a>
-            </div>
-            </div>
+            <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
+                <div class="col menu-mobile">
+                    <a class = "menu-mobile" href="index.html"> 
+                        <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
+                    </a>
+                </div>
+                <div class="col menu-mobile">
+                    <a class="menu-mobile" href="index.html"> 
+                        <img class="nav-elem menu-mobile" src="assets/img/nav/logo-eic-nav.svg">
+                    </a>
+                </div>
+                <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
+                <div class="col menu-mobile">
+                    <a class="menu-mobile" href="#menu-mobile-ativado"  data-toggle="modal"> 
+                        <img class="nav-elem" src="assets/img/nav/menu.svg">
+                    </a>
+                </div>
+                </div>
+        </div>
 
-    </div>
-
-<!--fim menu mobile-->
-<!-- Conteúdo da página -->
-<!-- Fazer botao de voltar-->
+    <!--fim menu mobile-->
+    <!-- Conteúdo da página -->
+    <!-- Fazer botao de voltar-->
     <div class="espaco-6"> </div>
 
     <h1 class="subtitulo-2">COMPARTILHAR</h1>
@@ -105,20 +109,23 @@
 
     <p> Compartilhe o jogo da memória com seus amigos e familiares </p>
     <div class="espaco-3"></div>
-    <!--Botoezinhos-->
+
+    <!--Divider-->
     <div class="espaco-3"></div>
-    <div class="cont-divider">
-        <div class="divider"></div>
-    </div>
+    <div class="divider"></div>
+    <div class="espaco-3"></div>
     <div class="espaco-3"></div>
 
     <h1 class="subtitulo-2">SIGA O EIC</h1>
     <div class="espaco-3"></div>
     <p> Interaja com a gente nas mídias sociais e em nosso site! </p>
-    <div class="espaco-3"></div>  
+    <div class="espaco-3"></div> 
+
     <!--Botoezinhos-->
     <div class="espaco-3"></div>
-     
+
+</div>
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
