--- a/fase1.html
+++ b/fase1.html
@@ -188,7 +188,7 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/menu-modal.js"></script>
+    <script src="assets/js/menuLateral.js"></script>
     <script src="assets/js/jogo.js"></script>
 </body>
 
